--- a/index.html
+++ b/index.html
@@ -45,9 +45,14 @@
       </div>
     </header>
     <!-- Showcase -->
-    <h1 id="titel">All-in Animatie</h1>
-    <hr>
+    <section>
+      <div id="showcase" class="container">
+
+      </div>
+    </section>
     <!-- Body -->
+    <h1 id="titel">All-in Animatie</h1>
+    <hr id="eerstelijn">
     <section id="main">
       <div class="container">
         <article id="main_col">
@@ -69,8 +74,8 @@
           </section>
           <div>
             <p id="ondertitel">In alle gevallen zit u bij All-in goed</p>
-            
           </div>
+          <div id="tweedelijn"><hr align="center"></div>
       <!-- Solliciteren -->
 
         <div class="container" id="solliciteren">
@@ -153,7 +158,7 @@ Een uur dansen met 100 kids? Graag!
 
         </div>
       </section>
-
+      <script src="./js/showcase.js"> </script>
 </footer>
 
   </body>
