--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <nav>
           <ul>
             <li class="current"><a href="index.html">Home</a></li>
-            <li><a href="werkenbijons.html">Werken bij</a></li>
+            <li><a href="werkenbij.html">Werken bij</a></li>
             <li id="diensten"><a href="werkenmetons.html">Diensten</a></li>
             <li><a href="blog.html">Blog</a></li>
             <li class="last"><a href="contact.php">Contact</a></li>
@@ -102,10 +102,10 @@
             <h3>Animatiewerk</h3>
             </a>
             <p>Geheel naar uw wens geschreven en uitgevoerd door enthousiaste medewerkers.Dat zijn geen mooie beloftes. Dat vinden wij vanzelfsprekend!
-<br>Wij onderscheiden ons door enkel maatwerk te leveren en zullen er dan ook alles aan doen om uw voor- en hoogseizoen echt dat beetje extra te geven.
-Een spooktocht met 250 deelnemers? Leuk!
-Een uur dansen met 100 kids? Graag!
-<br>Wat ons betreft kan het niet gek genoeg. Vanzelfsprekend gaan we graag met u in overleg om te kijken wat we voor u kunnen betekenen.</p>
+              <br>Wij onderscheiden ons door enkel maatwerk te leveren en zullen er dan ook alles aan doen om uw voor- en hoogseizoen echt dat beetje extra te geven.
+              Een spooktocht met 250 deelnemers? Leuk!
+              Een uur dansen met 100 kids? Graag!
+              <br>Wat ons betreft kan het niet gek genoeg. Vanzelfsprekend gaan we graag met u in overleg om te kijken wat we voor u kunnen betekenen.</p>
           </div>
             <div class="box">
               <a href="./Diensten.html">
