--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
           <h2>Animatiewerk en kindervermaak op maat</h2>
             <p>
               Met de basis stevig in Midden-Nederland werken wij hier al lange tijd succesvol samen met prachtige, luxe parken waar wij met plezier de animatie en het kindervermaak faciliteren.  
-            <br>Bij ons draait het maar om één ding; kwaliteit. Dat stralen we uit en daar zijn we trots op. Activiteiten organiseren en begeleiden doen wij niet alleen al heel lang én goed, we doen letterlijk niets liever! 
-            <br>Verzorgen betekent voor ons ontzorgen en dat doen we graag. <br> Wij stoppen namelijk pas als u en uw gasten helemaal tevreden zijn.
-            Zoekt u voor een aankomend seizoen een professioneel animatieteam dat er samen met u echt voor gaat? <br> Zoekt u professioneel kindervermaak en entertainment om dat ene feest of evenement net dat beetje extra te geven? 
+            Bij ons draait het maar om één ding; kwaliteit. Dat stralen we uit en daar zijn we trots op. Activiteiten organiseren en begeleiden doen wij niet alleen al heel lang én goed, we doen letterlijk niets liever! 
+            Verzorgen betekent voor ons ontzorgen en dat doen we graag. Wij stoppen namelijk pas als u en uw gasten helemaal tevreden zijn.
+            Zoekt u voor een aankomend seizoen een professioneel animatieteam dat er samen met u echt voor gaat? Zoekt u professioneel kindervermaak en entertainment om dat ene feest of evenement net dat beetje extra te geven? 
           </p>
         </article>
             </div>
@@ -75,7 +75,7 @@
           <div>
             <p id="ondertitel">In alle gevallen zit u bij All-in goed</p>
           </div>
-          <div id="tweedelijn"><hr align="center"></div>
+          
       <!-- Solliciteren -->
 
         <div class="container" id="solliciteren">
@@ -102,10 +102,10 @@
             <h3>Animatiewerk</h3>
             </a>
             <p>Geheel naar uw wens geschreven en uitgevoerd door enthousiaste medewerkers.Dat zijn geen mooie beloftes. Dat vinden wij vanzelfsprekend!
-              <br>Wij onderscheiden ons door enkel maatwerk te leveren en zullen er dan ook alles aan doen om uw voor- en hoogseizoen echt dat beetje extra te geven.
+              Wij onderscheiden ons door enkel maatwerk te leveren en zullen er dan ook alles aan doen om uw voor- en hoogseizoen echt dat beetje extra te geven.
               Een spooktocht met 250 deelnemers? Leuk!
               Een uur dansen met 100 kids? Graag!
-              <br>Wat ons betreft kan het niet gek genoeg. Vanzelfsprekend gaan we graag met u in overleg om te kijken wat we voor u kunnen betekenen.</p>
+              Wat ons betreft kan het niet gek genoeg. Vanzelfsprekend gaan we graag met u in overleg om te kijken wat we voor u kunnen betekenen.</p>
           </div>
             <div class="box">
               <a href="./Diensten.html">
