--- a/werkenbij.html
+++ b/werkenbij.html
@@ -7,7 +7,7 @@
 	  <meta name="keywords" content="">
   	<meta name="author" content="Vincent Burggraaf">
 
-    <title>All-In Animatie | Home</title>
+    <title>All-In Animatie | Werken bij</title>
 
 
     <!-- Global CSS imports -->
@@ -89,8 +89,25 @@
 
                 <div id="programma">
                   <h1>Een dag in beeld</h1>
-                  <img src="./img/voorbeeldprogramma.png" alt="ons programma">
+                  <img src="./img/voorbeeld2.png" alt="ons programma">
+                  <img src="./img/voorbeeld1.png" alt="ons programma">
+
                 </div>
+
+                <div id="overanimatie">
+                  <h2>Animatiewerk</h2>
+                  <p>Ben jij graag met kinderen bezig? Word jij vrolijk van toneel, dans, knutsels en ben je graag buiten? Dan hebben wij voor jou de ideale vakantiebaan.
+                     Recreatiewerk is leuk, zo leuk zelfs dat het af en toe bijna voelt alsof je vakantie aan het vieren bent.
+                     Wij leren jou graag alles over dit mooie vak. Ervaring is daarom geen vereiste, enthousiasme wel!
+                    <br><br><span id="benjij">Ben jij die enthousiasteling die wij zoeken?</span> <br><br>
+                    <span id="laatstezin"> Kijk dan eens naar onze <a id="linkvacatures">vacatures</a></span></p>
+
+                   </div>
+
+                   <div id="quotes">
+                       <img src="./img/elisa.jpg"></img>
+                     </div>
+
 
                 <footer>
                         <section id="voet">
