--- a/vacatures.html
+++ b/vacatures.html
@@ -48,17 +48,17 @@
           </div>
 
           <div id="boxes">
-            <div class="container">
+            <div class="wrapper">
               <div class="box">
 
 
                 <h3>Animatiemedewerker</h3>
-                <img src="./img/schuimfeest.jpg">
-                <p>Word jij mega enthousiast van werken met kinderen? Ben je graag buiten en onder de mensen? Als medewerker animatie verzorg jij het dagelijkse programma. Jij zorgt ervoor dat de knutsel 's ochtends goed voorbereid is en dat het voetbaltoernooi vlekkeloos verloopt. Later op de dag lekker dansen en toneel en om de dag af te sluiten een gezellig kampvuur. <br><br>
-                Klinkt dat als een leuke dag? Wij vinden van wel! Jij ook? Laat het ons weten en solliciteer.
-                <br><br> Wij willen: enthousiasme
+                <img src="./img/vacature1.jpg">
+                <p>Word jij mega enthousiast van werken met kinderen? Ben je graag buiten en onder de mensen? Als medewerker animatie verzorg jij het dagelijkse programma. Jij zorgt ervoor dat de knutsel 's ochtends goed voorbereid is en dat het voetbaltoernooi vlekkeloos verloopt. Later op de dag lekker dansen en toneel en om de dag af te sluiten een gezellig kampvuur. <br>
 
-                <br><br> Wij bieden: 160-, tot 420-, per week
+               <br><br><br><br><span id="wijwillen">Wij willen:</span> Enthousiasme
+
+              <br> <span id="wijwillen">Wij bieden:</span> 160-, tot 420-, per week
 
 
 
@@ -66,16 +66,65 @@
                   </div>
                   <div class="box">
 
-                    <img src="./img/fotovincent.jpg">
-                    <h3>Leidinggevende</h3>
 
-                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum. </p>
+                    <h3>Leidinggevende</h3>
+                    <img src="./img/fotolijst3.jpg">
+                    <p>Als leidinggevende ben jij verantwoordelijk voor de dagelijkse gang van zaken op jouw eigen park. Buiten het 'gewone' programma om vervul jij moeiteloos je functie als teamleider en contactpersoon.
+                       Een spooktocht met 250 deelnemers organiseren vind jij niet eng maar een gave uitdaging! Vanzelfsprekend kun je tijdens je werk rekenen op onze steun en begeleiding.
+                      <br><br> <br><br><span id="wijwillen"> Wij willen:</span> Iemand die communicatief en organisatorisch sterk in de schoenen staat.
+
+                       <br><span id="wijwillen"> Wij bieden:</span>  minimaal 300-, per week
+
+                     </p>
                   </div>
                   <div class="box">
 
-                    <img src="./img/fotoschmink2.jpg">
+
                       <h3>Flexpool</h3>
-                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum. </p>
+                      <img src="./img/fotoschmink2.jpg">
+                    <p>Ook buiten ons seizoen om hebben we leuke opdrachten. Zo verzorgen wij bijvoorbeeld het kindervermaak voor een aantal grote hotels. Lijkt het jou leuk om af en toe een dagje te schminken en te knutselen? Dan ben je van harte welkom in onze flexpool. Werken wanneer jij wil en kan!
+                      <br><br> <br><br><br><br><span id="wijwillen">Wij willen:</span> Iemand die graag met kinderen werkt. Bonuspunten als je kunt schminken.
+
+                       <span id="wijwillen"> Wij bieden:</span> 6- tot 15- euro per uur
+                     </p>
                   </div>
                 </div>
               </div>
+
+              <footer>
+                      <section id="voet">
+                      <div class="container">
+                        <div class="box" id="social">
+                          <h3>Social</h3>
+                          <a><img src=./img/instagram.png></a>
+                          <a><img src=./img/facebook.png></a>
+                          <a><img src=./img/twitter.png></a>
+                        </div>
+
+                        <div class="box" id="navigatie">
+                          <h3>Navigatie</h3>
+                          <ul>
+                            <li class="current"><a href="index.html">Home</a></li>
+                            <li><a href="werkenbijons.html">Werken bij</a></li>
+                            <li><a href="werkenmetons.html">Diensten</a></li>
+                            <li><a href="programmas.html">Blog</a></li>
+                            <li><a href="contact.php">Contact</a></li>
+                          </ul>
+                        </div>
+
+                        <div class="box" id="contact">
+                          <h3>Contact</h3>
+                          <ul>
+                          <li><a><img src="./img/email.png" /> info@allinanimatie.nl</a></li>
+                          <li><a><img src="./img/phone.png" /> 06 15306236</a></li>
+                          <li><a><img src="./img/place.png" /> Thorbeckesingel 102 <br> Veenendaal</a></li>
+                        </ul>
+                        </div>
+
+                      </div>
+                    </section>
+                    <script src="./js/showcase.js"> </script>
+              </footer>
+
+                </body>
+                </html>
