--- a/werkenbij.html
+++ b/werkenbij.html
@@ -53,7 +53,8 @@
 
           <section id="content">
             <div class="container">
-              <article id="main_content">
+              <div>
+                <article id="main_content">
                 <h2>Onze garanties:</h2>
                 <ul>
                   <li class="hoofd">De allerbeste begeleiding naar jouw nieuwe (bij)baan</li>
@@ -69,7 +70,7 @@
                 </ul>
                 </article>
                 </div>
-
+                <div id="aside">
                 <aside id="grid">
                   <figure class="gallery_item gallery_item--1">
                     <img src="./img/tominstoel.jpg" class="gallery_img">
@@ -86,14 +87,15 @@
                   </figure>
                   </aside>
                 </section>
-
+              </div>
+              </div>
                 <div id="programma">
                   <h1>Een dag in beeld</h1>
                   <img src="./img/voorbeeld2.png" alt="ons programma">
                   <img src="./img/voorbeeld1.png" alt="ons programma">
 
                 </div>
-
+                <div class="container">
                 <div id="overanimatie">
                   <h2>Animatiewerk</h2>
                   <p>Ben jij graag met kinderen bezig? Word jij vrolijk van toneel, dans, knutsels en ben je graag buiten? Dan hebben wij voor jou de ideale vakantiebaan.
@@ -105,9 +107,12 @@
                    </div>
 
                    <div id="quotes">
-                       <img src="./img/elisa.jpg"></img>
-                     </div>
 
+                       <img src="./img/fotoelisa.jpg"></img>
+                       <q>Voor mij als student die graag met kinderen werkt de perfecte bijbaan!</q>
+                    
+                     </div>
+                  </div>
 
                 <footer>
                         <section id="voet">
