--- a/vacatures.html
+++ b/vacatures.html
@@ -41,10 +41,21 @@
 
     <div class="sollicitatie">
       <h1>De allerleukste bijbaan</h1>
+
       <div id="tekst">
+
         <p>In verband met aanhoudende groei is All-in altijd op zoek naar nieuwe, enthousiaste medewerkers. Ben jij nog op zoek naar een geweldige vakantiebaan? Dan hebben wij vast wat leuks voor je. Wij zoeken o.a. animatiemedewerkers en leidinggevenden voor op onze prachtige parken maar ook enthousiastelingen die het leuk vinden om op evenementen en feestdagen met kinderen te werken zijn van harte welkom in onze flexpool. </p>
         <h3>Antwoord op de meest gestelde vragen vind je <a href="blog.html">hier</a></h3>
         </div>
+          </div>
+          <div id="salaris">
+            <h1>Verdiensten</h1>
+            <p id="salaristekst"> Kom jij bij ons te werken dan stap jij altijd in op een mooi uurloon! Gaan wij een samenwerking aan dan begin je altijd in schaal 2. Uiteraard is er nog voldoende ruimte om door te groeien naar nog mooiere bedragen.<br> Alle genoemde bedragen zijn netto!</p>
+            <img src="./img/salaris.jpg">
+
+          </div>
+
+          <div id="legeruimte">
           </div>
 
           <div id="boxes">
@@ -83,12 +94,16 @@
                       <h3>Flexpool</h3>
                       <img src="./img/fotoschmink2.jpg">
                     <p>Ook buiten ons seizoen om hebben we leuke opdrachten. Zo verzorgen wij bijvoorbeeld het kindervermaak voor een aantal grote hotels. Lijkt het jou leuk om af en toe een dagje te schminken en te knutselen? Dan ben je van harte welkom in onze flexpool. Werken wanneer jij wil en kan!
-                      <br><br> <br><br><br><br><span id="wijwillen">Wij willen:</span> Iemand die graag met kinderen werkt. Bonuspunten als je kunt schminken.
+                    <br><br><br><br><br><br>  <span id="wijwillen">Wij willen:</span> Iemand die graag met kinderen werkt. Bonuspunten als je kunt schminken.
 
-                       <span id="wijwillen"> Wij bieden:</span> 6- tot 15- euro per uur
+                      <span id="wijwillen"> Wij bieden:</span> 6- tot 15- euro per uur
                      </p>
                   </div>
                 </div>
+              </div>
+
+              <div class="button">
+                <button class="btn">Solliciteer nu!</button>
               </div>
 
               <footer>
