--- a/index.html
+++ b/index.html
@@ -33,10 +33,14 @@
         <img src="./img/logzonderletters.png" />
 
         <!-- Navigation -->
-        <nav>
+        <nav role="navigation">
           <ul>
             <li class="current"><a href="index.html">Home</a></li>
-            <li><a href="werkenbij.html">Werken bij</a></li>
+            <li><a href="werkenbij.html">Werken bij</a>
+              <ul class="dropdown">
+                <li><a href="vacatures.html">Vacatures</a></li>
+              </ul>
+            </li>
             <li id="diensten"><a href="werkenmetons.html">Diensten</a></li>
             <li><a href="blog.html">Blog</a></li>
             <li class="last"><a href="contact.php">Contact</a></li>
@@ -75,7 +79,7 @@
           <div>
             <p id="ondertitel">In alle gevallen zit u bij All-in goed</p>
           </div>
-          
+
       <!-- Solliciteren -->
 
         <div class="container" id="solliciteren">
