--- a/allinnieuw.html
+++ b/allinnieuw.html
@@ -33,15 +33,11 @@
         <img src="./img/logzonderletters.png" />
 
         <!-- Navigation -->
-        <nav role="navigation">
+        <nav>
           <ul>
             <li class="current"><a href="index.html">Home</a></li>
-            <li><a href="werkenbij.html">Werken bij</a>
-              <ul class="dropdown">
-                <li><a href="vacatures.html">Vacatures</a></li>
-              </ul>
-            </li>
-            <li id="diensten"><a href="Diensten.html">Diensten</a></li>
+            <li><a href="werkenbijons.html">Werken bij</a></li>
+            <li id="diensten"><a href="werkenmetons.html">Diensten</a></li>
             <li><a href="blog.html">Blog</a></li>
             <li class="last"><a href="contact.php">Contact</a></li>
           </ul>
@@ -49,52 +45,35 @@
       </div>
     </header>
     <!-- Showcase -->
-    <section>
-      <div id="showcase" class="container">
-
-      </div>
-    </section>
+    <p id="titel">All-in Animatie</p>
+    <hr>
     <!-- Body -->
-    <h1 id="titel">All-in Animatie</h1>
-    <hr id="eerstelijn">
     <section id="main">
       <div class="container">
         <article id="main_col">
-          <h2>Animatiewerk en kindervermaak op maat</h2>
-            <p>
+            <p>All-in verzorgt al meer dan 10 jaar animatiewerk en entertainment op maat en dat doen we met plezier en trots.
+              <br><br>
               Met de basis stevig in Midden-Nederland werken wij hier al lange tijd succesvol samen met prachtige, luxe parken waar wij met plezier de animatie en het kindervermaak faciliteren.  
-            Bij ons draait het maar om één ding; kwaliteit. Dat stralen we uit en daar zijn we trots op. Activiteiten organiseren en begeleiden doen wij niet alleen al heel lang én goed, we doen letterlijk niets liever! 
-            Verzorgen betekent voor ons ontzorgen en dat doen we graag. Wij stoppen namelijk pas als u en uw gasten helemaal tevreden zijn.
-            Zoekt u voor een aankomend seizoen een professioneel animatieteam dat er samen met u echt voor gaat? Zoekt u professioneel kindervermaak en entertainment om dat ene feest of evenement net dat beetje extra te geven? 
-          </p>
-        </article>
+            <br>Bij ons draait het maar om één ding; kwaliteit. Dat stralen we uit en daar zijn we trots op. Activiteiten organiseren en begeleiden doen wij niet alleen al heel lang én goed, we doen letterlijk niets liever! 
+            </p>
+          </article>
             </div>
 
         <aside id="sidebar">
           <div>
-            <img src="./img/fotojamie.jpg">
+            <img src="./img/fotoschmink2.jpg">
           </div>
           </aside>
           </section>
-          <div>
-            <p id="ondertitel">In alle gevallen zit u bij All-in goed</p>
-          </div>
 
       <!-- Solliciteren -->
-
-        <div class="container" id="solliciteren">
+      <section id="solliciteren">
+        <div class="container">
           <h1>Op zoek naar de allerleukste vakantiebaan?</h1>
-          <img src="./img/kabouters.jpg" alt="kabouters">
-          <button class="btn">Meer informatie!</button>
         </div>
-
-
-      <!-- Foto -->
-
-
-
-
-
+          <div><a href="vacatures.html">Vacatures</a>
+        </div>
+      </section>
 
       <!-- Boxes -->
 
@@ -105,11 +84,7 @@
             <img src="./img/animatiewerk.jpg">
             <h3>Animatiewerk</h3>
             </a>
-            <p>Geheel naar uw wens geschreven en uitgevoerd door enthousiaste medewerkers.Dat zijn geen mooie beloftes. Dat vinden wij vanzelfsprekend!
-              Wij onderscheiden ons door enkel maatwerk te leveren en zullen er dan ook alles aan doen om uw voor- en hoogseizoen echt dat beetje extra te geven.
-              Een spooktocht met 250 deelnemers? Leuk!
-              Een uur dansen met 100 kids? Graag!
-              Wat ons betreft kan het niet gek genoeg. Vanzelfsprekend gaan we graag met u in overleg om te kijken wat we voor u kunnen betekenen.</p>
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum. </p>
           </div>
             <div class="box">
               <a href="./Diensten.html">
@@ -162,7 +137,7 @@
 
         </div>
       </section>
-      <script src="./js/showcase.js"> </script>
+
 </footer>
 
   </body>
