--- a/vacatures.html
+++ b/vacatures.html
@@ -31,7 +31,7 @@
           <ul>
             <li><a href="index.html">Home</a></li>
             <li class="current"<a href="werkenbij.html">Werken bij</a></li>
-            <li id="diensten"><a href="werkenmetons.html">Diensten</a></li>
+            <li id="diensten"><a href="Diensten.html">Diensten</a></li>
             <li><a href="blog.html">Blog</a></li>
             <li class="last"><a href="contact.php">Contact</a></li>
           </ul>
