--- a/werkenbij.html
+++ b/werkenbij.html
@@ -31,7 +31,7 @@
           <ul>
             <li><a href="index.html">Home</a></li>
             <li class="current"<a href="werkenbij.html">Werken bij</a></li>
-            <li id="diensten"><a href="werkenmetons.html">Diensten</a></li>
+            <li id="diensten"><a href="Diensten.html">Diensten</a></li>
             <li><a href="blog.html">Blog</a></li>
             <li class="last"><a href="contact.php">Contact</a></li>
           </ul>
@@ -102,7 +102,7 @@
                      Recreatiewerk is leuk, zo leuk zelfs dat het af en toe bijna voelt alsof je vakantie aan het vieren bent.
                      Wij leren jou graag alles over dit mooie vak. Ervaring is daarom geen vereiste, enthousiasme wel!
                     <br><br><span id="benjij">Ben jij die enthousiasteling die wij zoeken?</span> <br><br>
-                    <span id="laatstezin"> Kijk dan eens naar onze <a id="linkvacatures">vacatures</a></span></p>
+                    <span id="laatstezin"> Kijk dan eens naar onze <a href="./vacatures.html" id="linkvacatures">vacatures</a></span></p>
 
                    </div>
 
@@ -110,7 +110,7 @@
 
                        <img src="./img/fotoelisa.jpg"></img>
                        <q>Voor mij als student die graag met kinderen werkt de perfecte bijbaan!</q>
-                    
+
                      </div>
                   </div>
 
