--- a/Diensten.html
+++ b/Diensten.html
@@ -54,41 +54,57 @@
         <button onClick="document.getElementById('first').scrollIntoView();" class="btn">Animatiewerk</button>
         <button onClick="document.getElementById('second').scrollIntoView();"  class="btn">Kindervermaak</button>
         <button onClick="document.getElementById('third').scrollIntoView();" class="btn">Schmink</button>
-        <button onClick="document.getElementById('fourth').scrollIntoView();" class="btn">Anders</button>
+        <button onClick="document.getElementById('fourth').scrollIntoView();" class="btn">Een Nanny</button>
       </div>
       </div>
     </div>
 
 
+
     <section id="first">
         <div class="container">
-          <h1 class="paginatitel">Diensten</h1>
+          <h1 class="paginatitel">Wat mogen wij voor u betekenen?</h1>
           <article id="main_col">
             <ul id="Diensten">
               <li>
                   <h3>Animatiewerk</h3>
+
                   <img src="./img/fotoanimatiewerk1.jpg" id="fotowerk">
+                  <blockquote>
+                  All-in animatie weet altijd een programma te ontwerpen dat perfect aansluit op onze mogelijkheden en wensen als park. Ze leveren personeel dat er zichtbaar zin in heeft en denken op alle mogelijke manieren met ons mee. Dit zorgt
+                  ervoor dat we al jaren bijzonder prettig samenwerken.
+                  <span>Olav Petram, eigenaar Allurepark Laag Kanje</span>
+                  </blockquote>
 
                   <p>Bent u op zoek naar een enthousiast en gedreven animatieteam dan zit u bij ons goed. All-in kenmerkt zich door een puur persoonlijke aanpak.
                     Zo kennen wij geen vaste programma's, paketten of extra kosten maar ontwerpen wij onze programma's in samenspraak en naar de mogelijkheden, faciliteiten en doelgroepen van uw park.
                     Al ons personeel wordt zorgvuldig geselecteerd en getraind. Zo kunnen wij personeel leveren dat niet alleen met plezier voor u aan het werk gaat maar ook lachend dat stapje extra zet.
                     </p>
+
+
                     <span id="laatsteregel">Prijs: Aan de hand van uw wensen ontvangt u een offerte op maat.</span>
+                    <button id="knopboeken">Uw eigen animatieteam</button>
+
               </li>
+
               <li>
       <section id="second">
+
                   <h3>Kindervermaak</h3>
                   <img src="./img/fotovermaak2.jpg">
 
 
                     <img src="./img/fotovermaak5.jpg">
+
                   <p>Zoekt u professionele entertainers voor tijdens dat éne drukke event? Heeft u een (bedrijfs)feest en wil u dat de aanwezige kinderen op professionele wijze begeleid worden met bijvoorbeeld een pakket vol activiteiten en knutsel?
 
-                    <br> All-in verzorgt met een persoonlijke aanpak uw volledige entertainment.
+                     All-in verzorgt met een persoonlijke aanpak uw volledige entertainment.
                      Wij creëren aan de hand van uw wensen een dagprogramma dat echt iets toevoegt aan uw event of dag.
                     </p>
                 <span id="laatsteregel">Prijs: Vanaf 27.50,- p.u. (incl. materiaal)</span>
+                  <button id="knopboeken">Entertainment op maat</button>
               </li>
+
               <li>
       <section id="third">
                   <h3>Schmink</h3>
@@ -98,26 +114,23 @@
                     <img src="./img/fotoschmink.jpg">
 
                   <p>Volledig verzorgde schmink en aankleding geven uw evenement net dat beetje extra. Onze medewerkers volgen geregeld trainingen zodat wij uw (jongste) bezoekers altijd van de mooiste creaties kunnen voorzien.
-                      <br>Wij creëren op locatie prachtig aangeklede kinderhoeken waar ook buiten het schminken om van alles te beleven valt.
+                      Wij creëren op locatie prachtig aangeklede kinderhoeken waar ook buiten het schminken om van alles te beleven valt.
                      </p>
                 <span id="laatsteregel">Prijs: Vanaf 30,- p.u. (incl. materiaal)</span>
+                  <button id="knopboeken">Kleurrijk kindervermaak</button>
               </li>
+
               <li>
       <section id="fourth">
                   <h3>Nanny/Oppas</h3>
                     <img src="./img/fotonanny.jpg">
                   <p>Een verantwoordelijke nanny om u te ontzorgen op uw belangrijke dag.
                     In samenspraak en geschreven vanuit uw wensen verzorgen wij een dagprogramma vol activiteiten.
-                  <br>Vanzelfsprekend zijn al onze medewerkers pedagogisch geschoold. Zo kunt u in alle rust genieten van uw dag. </p>
+                  Vanzelfsprekend zijn al onze medewerkers pedagogisch geschoold. Zo kunt u in alle rust genieten van uw dag. </p>
                     <span id="laatsteregel">Prijs: 30,- p.u.</span>
+                      <button id="knopboeken">Uw persoonlijke Nanny</button>
               </li>
 
               </ul>
           </article>
         </div>
-          <aside id="sidebar">
-            <div class="dark">
-            <h3>Ervaringen</h3>
-            <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text.</p>
-            </div>
-            </aside>
