--- a/Dienstenbackup.html
+++ b/Dienstenbackup.html
@@ -59,12 +59,14 @@
       </div>
     </div>
 
-    <h1 class="paginatitel">Wat mogen wij voor u betekenen?</h1>
+
 
       <div id="first">
-        <div class="container1">
-
-
+        <div class="container">
+          <h1 class="paginatitel">Wat mogen wij voor u betekenen?</h1>
+          <article id="main_col">
+            <ul id="Diensten">
+              <li>
                   <h3>Animatiewerk</h3>
 
                   <img src="./img/fotoanimatiewerk1.jpg" id="fotowerk">
@@ -78,12 +80,16 @@
 
                     <span id="laatsteregel">Prijs: Aan de hand van uw wensen ontvangt u een offerte op maat.</span>
                     <button id="knopboeken">Uw eigen animatieteam</button>
-
+                    <blockquote>
+                    All-in animatie weet altijd een programma te ontwerpen dat perfect aansluit op onze mogelijkheden en wensen als park. Ze leveren personeel dat er zichtbaar zin in heeft en denken op alle mogelijke manieren met ons mee. Dit zorgt
+                    ervoor dat we al jaren bijzonder prettig samenwerken.
+                    <span>Olav Petram, eigenaar Allurepark Laag Kanje</span>
+                    </blockquote>
                   </div>
                   </div>
-
-                  <div id="second">
-                    <div class="container1">
+              </li>
+              <li>
+      <section id="second">
 
                   <h3>Kindervermaak</h3>
                   <img src="./img/fotovermaak2.jpg">
@@ -98,13 +104,10 @@
                     </p>
                 <span id="laatsteregel">Prijs: Vanaf 27.50,- p.u. (incl. materiaal)</span>
                   <button id="knopboeken">Entertainment op maat</button>
+              </li>
 
-                </div>
-              </div>
-
-              <div id="third">
-                <div class="container1">
-
+              <li>
+      <section id="third">
                   <h3>Schmink</h3>
 
                   <img src="./img/fotoschmink5.jpg">
@@ -116,13 +119,10 @@
                      </p>
                 <span id="laatsteregel">Prijs: Vanaf 30,- p.u. (incl. materiaal)</span>
                   <button id="knopboeken">Kleurrijk kindervermaak</button>
-                </div>
-              </div>
+              </li>
 
-              <div id="fourth">
-                <div class="container1">
-
-
+              <li>
+      <section id="fourth">
                   <h3>Nanny/Oppas</h3>
                     <img src="./img/fotonanny.jpg">
                   <p>Een verantwoordelijke nanny om u te ontzorgen op uw belangrijke dag.
@@ -130,45 +130,8 @@
                   Vanzelfsprekend zijn al onze medewerkers pedagogisch geschoold. Zo kunt u in alle rust genieten van uw dag. </p>
                     <span id="laatsteregel">Prijs: 30,- p.u.</span>
                       <button id="knopboeken">Uw persoonlijke Nanny</button>
+              </li>
 
+              </ul>
+          </article>
         </div>
-      </div>
-
-
-      <footer>
-              <section id="voet">
-              <div class="container">
-                <div class="box" id="social">
-                  <h3>Social</h3>
-                  <a><img src=./img/instagram.png></a>
-                  <a><img src=./img/facebook.png></a>
-                  <a><img src=./img/twitter.png></a>
-                </div>
-
-                <div class="box" id="navigatie">
-                  <h3>Navigatie</h3>
-                  <ul>
-                    <li class="current"><a href="index.html">Home</a></li>
-                    <li><a href="werkenbijons.html">Werken bij</a></li>
-                    <li><a href="werkenmetons.html">Diensten</a></li>
-                    <li><a href="programmas.html">Blog</a></li>
-                    <li><a href="contact.php">Contact</a></li>
-                  </ul>
-                </div>
-
-                <div class="box" id="contact">
-                  <h3>Contact</h3>
-                  <ul>
-                  <li><a><img src="./img/email.png" /> info@allinanimatie.nl</a></li>
-                  <li><a><img src="./img/phone.png" /> 06 15306236</a></li>
-                  <li><a><img src="./img/place.png" /> Thorbeckesingel 102 <br> Veenendaal</a></li>
-                </ul>
-                </div>
-
-              </div>
-            </section>
-            <script src="./js/showcase.js"> </script>
-      </footer>
-
-        </body>
-        </html>
