--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <meta name="description" content="">
 	  <meta name="keywords" content="">
   	<meta name="author" content="Vincent Burggraaf">
@@ -116,14 +116,18 @@
               <img src="./img/kindervermaak.jpg">
               <h3>Kindervermaak</h3>
               </a>
-              <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum. </p>
+              <p>Al jaren voorzien wij grote namen van een passende invulling als het gaat om hun allerjongste gasten. Altijd op locatie en volledig naar wens bedacht, geschreven en uitgevoerd.
+                 Wij doen er alles aan om echt iets toe te voegen aan uw event of dag. Dat bereiken wij met een persoonlijke aanpak en professioneel personeel. Onze medewerkers doen niets liever dan met kinderen werken en dat stralen ze uit!
+                 Wat de gelegenheid ook mag zijn, wij denken graag met u mee.</p>
             </div>
               <div class="box">
                 <a href="./Diensten.html">
                 <img src="./img/fotoschmink.jpg">
                 <h3>Schmink</h3>
                 </a>
-                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum. </p>
+                <p>Wordt u vrolijk van geschminkte gezichtjes? Wij wel! Maak uw event of dag nog kleurrijker met een prachtig, volledig verzorgt schminkpakket. Kiest u voor schmink dan krijgt u er automatisch kindervermaak bij.
+                   Wij creeeren op locatie namelijk gezellige kinderhoeken waar buiten het schminken om ook genoeg te beleven valt. Getraind personeel voorziet uw (jongste) gasten van de allermooiste creaties.
+                   Mogen wij uw dag nog mooier maken? Laat ons weten wat we voor u kunnen betekenen.</p>
               </div>
             </div>
           </div>
